force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <pluralLabel>Invoice Lines</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Line Name</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>