force-app/main/default/objects/Invoice_Line__c/fields/Discounted_Unit_Price__c.field-meta.xml
<CustomField>
  <fullName>Discounted_Unit_Price__c</fullName>
  <label>Discounted Unit Price</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>IF(Quantity__c &gt; 0, Total_Price__c / Quantity__c, 0)</formula>
</CustomField>