force-app/main/default/objects/Invoice_Line__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Display order for this line (1, 2, 3...)</description>
</CustomField>