force-app/main/default/objects/Invoice_Line__c/fields/Special_Conditions__c.field-meta.xml
<CustomField>
  <fullName>Special_Conditions__c</fullName>
  <label>Special Conditions</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetName>Special_Conditions</valueSetName>
  </valueSet>
</CustomField>