force-app/main/default/objects/Invoice_Line__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
  <fullName>Taxable_Amount__c</fullName>
  <label>Taxable Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>IF(Taxable__c, Total_Price__c, 0)</formula>
</CustomField>