force-app/main/default/objects/Invoice_Line__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
  <fullName>Total_Cost__c</fullName>
  <label>Total Cost</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>ROUND(Quantity__c * Cost__c, 2)</formula>
</CustomField>