force-app/main/default/objects/Invoice_Line__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
  <fullName>Unit_Of_Measure__c</fullName>
  <label>Unit of Measure</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetName>Unit_of_Measure</valueSetName>
  </valueSet>
</CustomField>